RESOLVED FIXED281838
[scroll-animations] ready task isn't scheduled when switching between monotonic and progress-based timelines
https://bugs.webkit.org/show_bug.cgi?id=281838
Summary [scroll-animations] ready task isn't scheduled when switching between monoton...
Antoine Quint
Reported 2024-10-20 12:05:03 PDT
We're failing some subtests in the WPT test `scroll-animations/scroll-timelines/setting-timeline.tentative.html` because we don't correctly schedule a ready task when switching between a monotinic and a progress-based timeline.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-20 12:05:17 PDT
Antoine Quint
Comment 2 2024-10-20 12:07:51 PDT
EWS
Comment 3 2024-10-20 22:03:44 PDT
Committed 285499@main (53782b6c3b15): <https://commits.webkit.org/285499@main> Reviewed commits have been landed. Closing PR #35501 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.