[scroll-animations] ready task isn't scheduled when switching between monotonic and progress-based timelines https://bugs.webkit.org/show_bug.cgi?id=281838 rdar://138282058

Reviewed by Simon Fraser.

We made an ill-advised optimization when implementing the revised "setting the timeline
of an animation" procedure from Web Animations Level 2. Indeed, we must compute the
"previous play state" prior to updating the timeline member since doing so may change
that value. We now follow the spec more closely and this addresses some WPT test failures.

* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/setting-timeline.tentative-expected.txt:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::setTimeline):

Canonical link: https://commits.webkit.org/285499@main